--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,10 @@
             </div>
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-5">Over 3 years,
-<div>we have provided quality and excellent services to oil and gas, food and beverages and Power sectors.</div></h2>
+                    <div>
+                        we have provided quality and excellent services to oil and gas, food and beverages and Power sectors.
+                    </div>
+                </h2>
                 <h3 class="mbr-section-subtitle align-right mbr-light mbr-white mbr-fonts-style display-7"><strong>
                     Barbadox Ltd.&nbsp;</strong></h3>
             </div>
